--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-12</title>
+    <title>IMAGEnation2</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
 
-    <script type="module" src="./main.js"></script>
+  <body>
+    <section class="search-section">
+      <h1 class="logo"><a href="">IMAGEnation2</a></h1>
+      <form class="search-form">
+        <input
+          type="text"
+          name="query"
+          placeholder="Search images..."
+          required
+        />
+        <button type="submit">Search</button>
+        <p class="handle"></p>
+      </form>
+    </section>
+    <div class="loader is-hidden"></div>
+    <ul class="gallery"></ul>
   </body>
+
+  <script type="module" src="./main.js"></script>
 </html>
