--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <title>IMAGEnation2</title>
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
       integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous"
@@ -18,6 +22,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <style>
+      input {
+        background-color: transparent;
+      }
+    </style>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -31,8 +40,7 @@
           placeholder="Search images..."
           required
         />
-        <button type="submit">Search</button>
-        <p class="handle"></p>
+        <button type="submit"><i class="ri-search-2-line"> </i></button>
       </form>
     </section>
     <div class="loader is-hidden"></div>
