--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
     </section>
     <div class="loader is-hidden"></div>
     <ul class="gallery"></ul>
+    <button class="load-more is-hidden" type="button">Load more</button>
   </body>
 
   <script type="module" src="./main.js"></script>
