--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <button type="submit"><i class="ri-search-2-line"> </i></button>
       </form>
     </section>
-    <div class="loader is-hidden"></div>
+    <div class="initial-loader is-hidden"></div>
     <ul class="gallery"></ul>
     <button class="load-more is-hidden" type="button">Load more</button>
   </body>
