--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
     <div class="initial-loader is-hidden"></div>
     <ul class="gallery"></ul>
     <button class="load-more is-hidden" type="button">Load more</button>
+    <footer class="footer"><i>&#169; 2024, Elijah Vakulenko</i></footer>
   </body>
 
   <script type="module" src="./main.js"></script>
